fix: fixed some layout issues, changed input for age to select element, added some hover effect and added some icons to profile modal indicating edit/valid input states

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,13 @@ body {
   font-family: "Inter", sans-serif;
   background-color: #f5f5f5;
 }
+
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear {
+  display: none;
+}
+
+input[type="password"]::-webkit-credentials-auto-fill-button,
+input[type="password"]::-webkit-password-toggle-button {
+  display: none;
+}
